--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "^16.11.0",
     "react-autosuggest": "^9.4.3",
     "react-dom": "^16.11.0",
+    "react-dom-factories": "^1.0.2",
     "react-intl": "^3.4.0",
     "react-select": "^3.0.8",
     "url": "^0.11.0"
