--- a/package.json
+++ b/package.json
@@ -17,13 +17,17 @@
   "dependencies": {
     "bluebird": "^3.5.1",
     "classnames": "^2.2.6",
+    "jss": "^9.8.7",
+    "jss-preset-default": "^4.5.0",
     "prop-types": "^15.7.2",
     "react": "^16.11.0",
     "react-autosuggest": "^9.4.3",
     "react-dom": "^16.11.0",
     "react-dom-factories": "^1.0.2",
+    "react-draggable": "^3.3.0",
     "react-intl": "^3.4.0",
     "react-select": "^3.0.8",
+    "react-window": "^1.8.5",
     "url": "^0.11.0"
   },
   "devDependencies": {
