--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "classnames": "^2.2.6",
     "jss": "^9.8.7",
     "jss-preset-default": "^4.5.0",
+    "memoize-one": "^5.0.5",
     "prop-types": "^15.7.2",
     "react": "^16.11.0",
     "react-autosuggest": "^9.4.3",
