Initial citeproc-rs support
Disabled under zotero.cite.useCiteprocRs by default

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "license": "",
   "dependencies": {
+    "@citeproc-rs/wasm": "^0.0.0-canary-49bfd87",
     "ace-builds": "^1.4.12",
     "bluebird": "^3.5.1",
     "classnames": "^2.2.6",
